Correção na URL do link do artigo

--- a/starter-code/views/partials/articleCard.hbs
+++ b/starter-code/views/partials/articleCard.hbs
@@ -5,6 +5,6 @@
   <div class="article-info">
     <h2 class="article-headline">{{this.headline.main}}</h2>
     <p><b>Snippet:</b> {{this.snippet}}</p>
-    <a href="https://www.nytimes.com/2019/03/03/sports/liverpool-everton-merseyside-derby-salah.html" target="_blank">View Article</a>
+    <a href="{{this.web_url}}" target="_blank">View Article</a>
   </div>
 </div>
